Ajuste em conexao do banco pelo host

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_URL=http://localhost:5000
 
 DB_CONNECTION=pgsql
 DB_HOST=db
-DB_PORT=3306
+DB_PORT=5432
 DB_NAME=ibge
-DB_USER=ibge
-DB_PASS=ibge
+DB_USER=postgres
+DB_PASS=postgres
