--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "php-di/slim-bridge": "^3.2",
     "fzaninotto/faker": "^1.5",
     "guzzle/guzzle": "*",
-    "guzzlehttp/guzzle": "^7.4"
+    "guzzlehttp/guzzle": "^7.4",
+    "jenssegers/blade": "^1.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
